--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "d3-org-chart",
   "version": "2.7.0",
   "module": "index",
+  "type": "module",
   "description": "Highly customizable org chart, created with d3",
   "keywords": [
     "d3",
